# IS601

./: .gitignore  pyproject.toml
django-base/: .gitignore  db.sqlite3  docker-compose.yml
django-base/IS601/: settings.py  urls.py
django-base/example/: admin.py  forms.py  models.py  urls.py  views.py
django-base/example/migrations/: 0001_initial.py  0002_bakedgood_stypes.py  0003_auto_20200709_0059.py
django-base/example/templates/example/: bake.html  bakeapi.html  base.html  detail.html  index.html
django-base/surveys/: views.py
